# lumo

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  server.Dockerfile
.cargo/: config.toml
lumo/: Cargo.toml
lumo-cli/: Cargo.toml
lumo-cli/src/: cli_utils.rs  config.rs  main.rs  splash.rs  telemetry.rs
lumo-cli/src/config/: servers.yaml
lumo-examples/: Cargo.toml
lumo-examples/examples/: cli.rs  function_calling_agent.rs  gemini_function_calling.rs  mcp.rs  multiagent.rs  planning_agent.rs  python_interpreter.rs  stream_agent.rs
lumo-server/: .env.example  Cargo.toml  openai_body.json
lumo-server/src/: auth.rs  config.rs  lib.rs  main.rs
lumo-server/src/config/: servers.yaml
lumo-server/tests/: health_check.rs
lumo/src/: lib.rs  local_python_interpreter.rs  prompts.rs
lumo/src/agent/: agent_step.rs  agent_trait.rs  code_agent.rs  function_calling_agent.rs  mcp_agent.rs  mod.rs  multistep_agent.rs
lumo/src/models/: gemini.rs  mod.rs  model_traits.rs  ollama.rs  openai.rs  types.rs
lumo/src/telemetry/: mod.rs
lumo/src/tools/: ddg_search.rs  exa_search.rs  final_answer.rs  google_search.rs  lance_rag.rs  mod.rs  python_interpreter.rs  tavily_search.rs  tool_traits.rs  visit_website.rs
