[package]
name = "lumo-cli"
version.workspace = true
edition = "2021"
description = "The CLI for running Lumo Agent"
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "lumo"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
lumo = {workspace = true, features = ["all"]}
mcp-core.workspace = true
mcp-client.workspace = true
async-trait.workspace = true
tower.workspace = true
colored.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
directories.workspace = true
futures.workspace = true
bat.workspace = true
rustyline.workspace = true
log.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
base64 = "0.22.1"

opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

ctrlc = "3.4"
dotenv = "0.15.0"    