[package]
name = "lumo-server"
version.workspace = true
edition.workspace = true
description = "Server to run lumo agent"
license.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
actix-web = "4"
lumo = {workspace = true, features = ["stream"]}
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
actix-cors = "0.7.0"
serde_yaml.workspace = true
directories.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }
opentelemetry = { version = "0.29.1", features = ["trace"]}
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.29.0" }
opentelemetry-semantic-conventions = { version = "0.29.0" }
opentelemetry-otlp = { version = "0.29.0", features = ["trace", "metrics","grpc-tonic",] }
tracing-opentelemetry = "0.30.0"
base64 = "0.22.1"
chrono.workspace = true
[features]
code = ["lumo/code-agent"]
mcp = ["lumo/mcp", "dep:mcp-core", "dep:mcp-client", "dep:tower"]

[dependencies.mcp-core]
workspace = true
optional = true

[dependencies.mcp-client]
workspace = true
optional = true

[dependencies.tower]
workspace = true
optional = true

[[bin]]
name = "lumo-server"
path = "src/main.rs"
