[package]
name = "lumo-server"
version.workspace = true
edition.workspace = true
description = "Server to run lumo agent"
license.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
actix-web = "4"
lumo = {workspace = true, features = ["stream"]}
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
actix-cors = "0.7.0"
serde_yaml.workspace = true
directories.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
chrono.workspace = true
base64 = "0.22.1"
dotenv = "0.15.0"

[features]
code = ["lumo/code-agent"]
mcp = ["lumo/mcp", "dep:mcp-core", "dep:mcp-client", "dep:tower"]

[dependencies.mcp-core]
workspace = true
optional = true

[dependencies.mcp-client]
workspace = true
optional = true

[dependencies.tower]
workspace = true
optional = true

[[bin]]
name = "lumo-server"
path = "src/main.rs"
